# Resume-Ranking-Tool

./: .replit  README.md  app.py  constants.py  db.py  extract.py  nlp.py  pyproject.toml  requirements.txt
.github/workflows/: main_resume-ranking-tool.yml
templates/: employeePage.html  employerPage.html  extra.html  flash.html  home.html  image.html  index.html  job.html  jobStatus.html  login.html  postedJobs.html  results.html  signup.html  uploadResume.html
workflows/: azure-app-service.yml
