[tool.poetry]
name = "repl-nix-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
werkzeug = "^3.0.3"
nltk = "^3.8.1"
docx = "^0.2.4"
numpy = "^2.0.0"
scikit-learn = "^1.5.0"
azure-storage-blob = "^12.20.0"
requests = "^2.32.3"
sentence-transformers = "^3.0.1"
azure-data-tables = "^12.5.0"
psycopg2-binary = "^2.9.9"
flask-cors = "^4.0.1"
bcrypt = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
